fixed css layout issues

--- a/client/main.css
+++ b/client/main.css
@@ -4,12 +4,19 @@
   border-color: #E2E2E2;
   background-color: #E2E2E2;
   padding: 0.7rem 3.3rem;
+  height: 40px;
   border-radius: 0;
   border-width: 1px;
   border-left-color: #1CCAD8;
   border-bottom-color: #1CCAD8;
   color: transparent;
   font-size:1em;
+}
+
+#week {
+  width: 91%;
+  margin-left: 9%;
+  margin-right: 0;
 }
 
 span {
@@ -19,12 +26,13 @@ span {
   font-size: 180%;
   font-family: Roboto;
   color: #E2E2E2;
-
 }
 
-#weekdays {
+
+
+.weekdays {
   width: 91%;
-  margin-left: 9%;
+  margin-left: 0;
   display: inline-block;
 }
 
@@ -34,7 +42,7 @@ span {
 }
 
 .btn-group-vertical {
-  width: 13%;
+  width: 14.2%;
 }
 
 .btn.btn-primary {
@@ -43,6 +51,8 @@ span {
   border-radius: 0;
   font-size:1em;
   padding: 0.7rem 0rem;
+  height: 40px;
+  border-right-color: #E2E2E2;
 }
 
 .btn.btn-primary:hover {
@@ -52,26 +62,37 @@ span {
 
 @media (max-width: 768px) {
   .btn.btn-outline-primary {
-    padding:8px 18px;
-    font-size:1em;
+    padding:0;
+    height: 20px;
+    font-size:100%;
   }
 
   .btn.btn-primary {
-    padding:8px 18px;
-    font-size:1em;
+    height: 20px;
+    padding:0;
+    font-size:100%;
   }
 
+}
+html
+.btn-outline-primary:not(:disabled):not(.disabled).active,
+.btn-outline-primary:not(:disabled):not(.disabled):active,
+.show>.btn-outline-primary.dropdown-toggle {
+  background-color: #1CCAD8;
+  border-color: #1CCAD8;
 }
 
 @media (min-width: 769px) and (max-width: 992px) {
   .btn.btn-outline-primary {
-    padding:8px 27px;
+    padding:0;
+    height: 30px;
     font-size:80%;
   }
 
   .btn.btn-primary {
-    padding:8px 27px;
+    padding:0;
     font-size:80%;
+    height: 30px;
   }
 
 
@@ -109,7 +130,7 @@ html body {
 
  #sidebar {
    width:9%;
-   background-color: brown;
+   background-color: #1CCAD8;
    display: inline-flex;
    flex-direction: column;
    align-items: flex-start;
